# prac-2022

./: CMakeLists.txt  config  main.cpp
Matrix/: Matrix.cpp  Matrix.h  Vector.h
Numbers/: ComplexNumber.cpp  ComplexNumber.h  Rational.cpp  Rational.h  long_number.cpp  long_number.h
output_doc/html/: _complex_number_8h_source.html  _matrix_8h_source.html  _rational_8h_source.html  _vector_8h_source.html  annotated.html  class_complex_number-members.html  class_complex_number.html  class_matrix-members.html  class_matrix.html  class_matrix__coords-members.html  class_matrix__coords.html  class_matrix__proxy-members.html  class_matrix__proxy.html  class_rational_number-members.html  class_rational_number.html  class_vector-members.html  class_vector.html  classes.html  classhas__frac__part-members.html  classhas__frac__part.html  classlong__number-members.html  classlong__number.html  classnot__a__number__error-members.html  classnot__a__number__error.html  classzero__division__error-members.html  classzero__division__error.html  dir_643e863c297e14dce1d35446f03b11d2.html  dir_7098b8a8763b1207dfd948a236e29639.html  dir_d60f6684020cb105011de41729268593.html  files.html  hierarchy.html  index.html  long__number_8h_source.html  parsing_8h_source.html  struct_matrix__column__coord-members.html  struct_matrix__column__coord.html  struct_matrix__row__coord-members.html  struct_matrix__row__coord.html  structis__complex.html  (+3 more)
output_doc/latex/: _complex_number_8h_source.tex  annotated.tex  (+27 more)
parsing/: parsing.cpp  parsing.h
tests/: test_long_number.cpp  test_rational_number.cpp
(+9 files in other folders)
